# cgif

./: .gitmodules  AUTHORS  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  cgif.c  cgif.h  cgif_example.c  cgif_example_video.c  meson.build  meson_options.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  cifuzz.yml  infer.yml
bench/: cgif_bench.c  ffmpeg_bench.c  giflib_bench.c  run.sh
cgif_tools/: Makefile  README.md  gifresize  gifresize.c
examples/: cgif_rgb_example.c  cgif_rgb_example_video.c  meson.build
fuzz/: cgif_create_fuzz_seed.c  cgif_file_fuzzer.c  cgif_fuzzer.c  cgif_fuzzer.cc  cgif_fuzzer_standalone.c  cgif_rgb_create_fuzz_seed.c  cgif_rgb_fuzzer.c  meson.build  seeds.md5  seeds.sha256
inc/: cgif.h  cgif_raw.h
src/: cgif.c  cgif_raw.c  cgif_rgb.c  cgif_safe_alloc.h
tests/: all_optim.c  alpha.c  animated_color_gradient.c  animated_interlaced.c  animated_single_pixel.c  animated_snake.c  animated_stripe_pattern.c  animated_stripe_pattern_2.c  animated_stripes_horizontal.c  avoid_compression.c  duplicate_frames.c  ealloc.c  ealloc_raw.c  ealloc_rgb.c  earlyclose.c  eindex.c  eindex_anim.c  enopalette.c  ewrite.c  ezeroheight.c  ezerowidth.c  ezerowidthheight.c  global_plus_local_table.c  global_plus_local_table_with_optim.c  has_transparency.c  has_transparency_2.c  local_transp.c  lzw_alloc_overflow.c  lzw_size_overflow.c  max_color_table_test.c  max_size.c  meson.build  min_color_table_test.c  min_size.c  more_than_256_colors.c  noise256.c  noise256_large.c  noise6.c  noise6_interlaced.c  noloop.c  (+27 more)
tests/scripts/: md5sum.py  sha256sum.py
