option(
  'examples',
  type : 'boolean',
  value : true,
  description : 'build examples',
)

option(
   'fuzzer',
   type : 'boolean',
   value : false,
   description : 'generate fuzz seed corpus and test it with standalone fuzzer',
)

option(
  'install_examples',
  type : 'boolean',
  value : false,
  description : 'install examples',
)

option(
  'tests',
  type : 'boolean',
  value : true,
  description : 'build tests',
)
